--- a/app/src/main/res/layout/new_product.xml
+++ b/app/src/main/res/layout/new_product.xml
@@ -52,7 +52,8 @@
         android:id="@+id/lbl2_your_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Supplier" />
+        android:text="Email Supplier"
+        android:inputType="textEmailAddress"/>
 
     <EditText
         android:id="@+id/etProductSupplier"
