--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,11 +12,7 @@
         android:id="@+id/rvProducts"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:clipToPadding="false"
-        android:scrollbarStyle="outsideOverlay"
-        />
+        android:padding="@dimen/activity_small_padding"
+        android:scrollbarStyle="outsideOverlay" />
 </RelativeLayout>
