--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_small_padding">8dp</dimen>
     <dimen name="activity_small_margin">8dp</dimen>
     <dimen name="activity_default_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
@@ -8,5 +9,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="row_height">95dp</dimen>
     <dimen name="image_size">100dp</dimen>
-
+    <dimen name="image_medium_size">60dp</dimen>
 </resources>
